--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-VITE_CONVEX_URL=https://silent-fly-140.convex.cloud
-AWS_ISSUER=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_f1jbqRSoH
-AWS_CLIENT_ID=74g4jh7uuqfi473hgpsesgtijo
-VITE_EMAIL_ADMIN=oconaill.darragh.mma@gmail.com
+VITE_CONVEX_URL=https://vivid-cormorant-209.convex.cloud
