--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^6.15.0",
     "@convex-dev/auth": "^0.0.88",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
@@ -18,7 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
-    "aws-amplify": "^6.15.5",
+    "@react-oauth/google": "^0.12.2",
     "convex": "^1.25.4",
     "emoji-mart": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
