add google login

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_CONVEX_URL=https://vivid-cormorant-209.convex.cloud
+VITE_CONVEX_URL=http://127.0.0.1:3210
+VITE_GOOGLE_CLIENT_ID=1033381853325-68ssdg6u9hh44amk21dq8nuqn5v6a4qe.apps.googleusercontent.com
+VITE_ID_TOKEN_KEY=idToken
+VITE_ID_TOKEN_STORE=localStorage
